# MCDReforged

./: .gitignore  pyproject.toml
plugins/: TelegramForward.py
plugins/GitHub/: GitHub.py  __init__.py
plugins/GitHub/typing/: GitHubCardInfo.py  GitHubCardsRequest.py  GitHubCardsState.py  GitHubColumnInfo.py  GitHubColumnsRequest.py  GitHubProjectInfo.py  GitHubProjectsRequest.py  GitHubUserInfo.py  __init__.py
plugins/telegram_forward_utils/: getenv.py
tests/plugins/: test_github.py
typings/MCDRTelegram/: Telegram.pyi  __init__.pyi
typings/aiogram/bot/: base.pyi  bot.pyi
typings/aiogram/dispatcher/: dispatcher.pyi  handler.pyi  storage.pyi  webhook.pyi
typings/aiogram/dispatcher/filters/: builtin.pyi  factory.pyi  filters.pyi  state.pyi
typings/aiogram/types/: base.pyi  callback_query.pyi  chat.pyi  force_reply.pyi  inline_keyboard.pyi  inline_query.pyi  inline_query_result.pyi  input_file.pyi  input_media.pyi  input_message_content.pyi  message.pyi  poll.pyi  reply_keyboard.pyi  shipping_option.pyi  sticker_set.pyi  user.pyi  webhook_info.pyi
typings/aiogram/utils/: deprecated.pyi  executor.pyi  helper.pyi  markdown.pyi  mixins.pyi  text_decorations.pyi
