[tool.poetry]
name = "mcdreforged"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.16.12"
requests = "^2.25.1"
colorlog = "^4.7.2"
colorama = "^0.4.4"
psutil = "^5.8.0"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
